[tool.poetry]
name = "repl-nix-second"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_second"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.31.1"
spyprot = "^0.8.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
